# thztools

./: .all-contributorsrc  .codespellrc  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ThzGen.ipynb  conftest.py  environment-dev.yml  environment.yml  id_ed25519.pub  pyproject.toml  requirements.txt  setup.py  simulation-example.ipynb  test.ipynb  test_data.mat
.github/ISSUE_TEMPLATE/: bug_report.yml  documentation.yml  feature_request.yml
.github/workflows/: draft-pdf.yml  publish-to-test-pypi.yml  pytest-with-coverage.yml  python-package-conda.yml  release.yaml  sphinx.yml  test-conda.yml  test-pip.yml  test.yml
dat/2017-03-20/Air Scans/Reduced1/: Scan001.thz  Scan006.thz  Scan013.thz  (+6 more)
docs/: requirements.txt
docs/source/: api.rst  conf.py  contributing.rst  costfun.rst  costfunlsq.rst  costfunwofflsq.rst  examples.rst  getting_started.rst  gettingstarted.rst  index.rst  modules.rst  noisefitshow.rst  pulsegen.rst  tdloglikelihood.rst  tdnll.rst  tdtf.rst  thzgen.rst  thztools.rst
docs/source/examples/: apply-frequency-response.ipynb  estimate-noise.ipynb  fit-frf.ipynb  fit-with-frf.ipynb  rescale-and-shift-waveform.ipynb  simulate-ideal-waveform.ipynb  simulate-noise.ipynb  simulate-waveform.ipynb  simulation-example.ipynb
docs/source/functions/: _util.epswater.rst  _util.fftfreq.rst  _util.shiftmtx.rst  thztools.DataPulse.rst  thztools.airscancorrect.rst  thztools.costfunlsq.rst  thztools.costfuntls.rst  thztools.epswater.rst  thztools.fftfreq.rst  thztools.noiseamp.rst  thztools.noisevar.rst  thztools.pulsegen.rst  thztools.shiftmtx.rst  thztools.sim_wave.rst  thztools.tdnll.rst  thztools.tdnll_scaled.rst  thztools.tdnoisefit.rst  thztools.tdtf.rst  thztools.tfout.rst  thztools.thzgen.rst  thztools.transfer_out.rst
envs/: environment-dev.yml  environment-test.yml
examples/: grad-tdnll.ipynb  odr-dev.ipynb  odr-test.ipynb  simulation-example-2.ipynb  simulation-example.ipynb  simulation-fit-freq-test.ipynb  simulation-fit-offset.ipynb  simulation-fit.ipynb  simulation-noisefit.ipynb  tdnll-approx-dev.ipynb  tdnll-scaled-dev.ipynb  tdnoisefit-dev.ipynb  tdnoisefit-refactor.ipynb  test-fit-bad-init.ipynb  tls-test.ipynb
examples/data/: README.md
examples/figgen/: calcnoise.py  datamc.py  plotnoiseest.py  plotpsd.py  plotsignal.py  test.ipynb
lib/: costfun.m  costfunlsq.m  costfunlsq_alt.m  costfunwofflsq.m  fftfreq-thzgen  fftfreq.m  isigmagen.m  noiseamp.py  pulsegen.m  sigmagen.m  tdloglikelihood.m  tdnll.m  tdnoisedifffit.m  tdnoisefit.m  test.m  test_fftfreq.ipynb  thzgen.m  thzgen.py  thzload.m  thztools.py  triginterp  triginterp.m  waveform.py
logo/: make_logo.py
matlab/: SI.m  costfun.m  costfunlsq.m  epswater.m  gen_test_data.m  jpcrateeq.m  noisevar.m  pulsegen.m  pulserationaldelay.m  shiftmtx_test_data.mat  tdloglikelihood.m  tdnll.m  tdnlldiff.m  tdnoisefit.m  test_data.mat  tests_for_python.m
notebooks/: 0.1-test-fftfreq.ipynb  0.2-test-noisevar.ipynb
package_example/: DataPulse.py  SI.py  pyrpoject.toml  thztools.py
paper/: paper.bib  paper.md
references/notes/: Code documentation resources.rtf  tdanalysisNotes.tex
src/thztools/: __about__.py  __init__.py  _util.py  conftest.py  thztools.py
test/: bias.csv  biasfit.m  costfun_test.m  costfun_test_lsq.m  costfundist.m  logPosterior.m  matlab_slurm.sl  mctdfit.m  mctdnoise.m  mctdnoisediff.m  noiseest.m  normres_test.m  normres_test_alt.m  pawdata.txt  pawtest.m  tdhmcnoisetest.m  tdhmcnoisetestmc.m  tdloglikelihoodtest.m  tdlogposterior.m  tdlogposteriortest.m  tdnlltest.m  testpdf.m
test/html/: costfundist.html  normres_test.html  pawtest.html  tdhmcnoisetest.html
test/logs/: biasfit-39233473.out  biasfit-39314914.out  biasfit-39604703.out  biasfit-39615153.out  biasfit-39629771.out  biasfit-39647675.out  biasfit-40548118.out  mctdnoise-40447535.out  mctdnoise-40448356.out  mctdnoise-40448386.out  tdhmcnoisetestmc-39971817.out  tdhmcnoisetestmc-39974282.out  tdhmcnoisetestmc-40000616.out
tests/: _unittest_thzools.py  consistency_test.py  consistency_test_jsd.py  consistency_test_v2.py  test.m  test_data.mat  test_fftfreq.ipynb  test_pytest.py  test_thzools.py  test_thztools.py  tests_v2.m  thzgen.m
tests/matlab/: DataPulse.m  airscancorrect.m  costfun.m  costfunlsq.m  costfunwofflsq.m  fftfreq.m  gen_test_data.m  noiseamp.m  noisevar.m  pulsegen.m  pulserationaldelay.m  shiftmtx.m  tdloglikelihood.m  tdnll.m  tdnlldiff.m  tdnoisedifffit.m  tdnoisefit.m  tdtf.m  tests_for_python.m  thzgen.m  thztools_test_data.mat
tests/test_files/: epswater_test_data.mat  fftfreq_test_data.mat  out_cosfunlsq_ones.csv  out_costfunlsq_rand.csv  shiftmtx_out.csv  tdnll_out.csv  tdnll_test_data.mat  tdtf_test_data.mat  thzgen_out.csv
testsPY/: airscancorrect_test_data.mat  cosfunlsq_out.csv  dataToptica.mat  data_try.txt  epswater_test_data.mat  fftfreq_test_data.mat  jpcrateeq_test_data.mat  jpcrateeq_test_data2.mat  noisevar_test_data.mat  pulsegen_test_data.mat  shiftmtx_test_data.mat  tdnoisefit_test_data.mat  tdnoisefit_test_python.mat  tdtf_test_data1.mat  test.m  test_airscancorrect.py  test_costfunlsq.py  test_epswater.py  test_fftfreq.py  test_jpcrateeq.py  test_jpcrateeq_broken.py  test_noisevar.py  test_pulsegen.py  test_tdnll.py  test_tdnoisefit-noisefitshow.ipynb  test_tdnoisefit.py  test_tdnoisefit_jonathan.ipynb  test_tdnoisefitshow.py  test_tdtf.py  test_thzgen.py  test_thzools.py  test_try.py  tests.m  tests_jonathan.m  tests_python.ipynb  tests_santiago.m  thzgen_test_data.mat
thztools/: __init__.py  _util.py  costfun.py  costfunlsq.py  fftfreq.py  noiseamp.py  noisevar.py  tdtf.py  thzgen.py  thztools.py  waveform.py
thztoolsPY/: DataPulse.py  SI.py  airscancorrect.py  costfun.py  costfunlsq.py  costfunwofflsq.py  epswater.py  fftfreq.py  jpcrateeq.py  noiseamp.py  noisefitshow.py  noisevar.py  pulsegen.py  pulserationaldelay.py  pulserelationdelay.py  shiftmtx.py  tdloglikelihood.py  tdnll.py  tdnlldiff.py  tdnoisedifffit.py  tdnoisefit.py  tdtf.py  thzgen.py  thzload.py
(+90 files in other folders)
