[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "thztools"
dynamic = ["version"]
description = "Tools for terahertz time-domain spectroscopy (THz-TDS)"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = ["terahertz", "THz", "time-domain spectroscopy", "data analysis"]
authors = [
    { name="Steve Dodge", email="jsdodge@sfu.ca" },
    { name="Santiago Higuera Quintero", email="s.higuera@uniandes.edu.co" },
    { name="Jonathan Posada", email="jonathan.posada1@udea.edu.co" },
    { name="Alireza Noori", email="alireza_noori@sfu.ca"}
]
maintainers = [
    { name="Steve Dodge", email="jsdodge@sfu.ca" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
  	"Programming Language :: Python",
  	"Programming Language :: Python :: 3.8",
  	"Programming Language :: Python :: 3.9",
  	"Programming Language :: Python :: 3.10",
  	"Programming Language :: Python :: 3.11",
  	"Programming Language :: Python :: Implementation :: CPython",
  	"Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy",
    "scipy",
    "numdifftools",
]

[project.urls]
Documentation = "https://dodge-research-group.github.io/thztools/"
Issues = "https://github.com/dodge-research-group/thztools/issues"
Source = "https://github.com/dodge-research-group/thztools"

[tool.hatch.version]
path = "src/thztools/__about__.py"

[tool.hatch.envs.default]
dependencies = [
    "coverage[toml]>=6.5",
    "jupyter",
    "matplotlib",
    "pytest",
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
    "- coverage combine",
    "coverage report",
    "coverage html",
]
cov = [
    "test-cov",
    "cov-report",
]
make-logo = ["python logo/make_logo.py; mv thztools_logo.svg docs/source/_static/;mv thztools_logo_dark.svg docs/source/_static/"]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11"]

[tool.hatch.envs.lint]
detached = true
dependencies = [
    "black>=23.1.0",
    "black[jupyter]",
    "mypy>=1.0.0",
    "numpy>=1.21",
    "ruff>=0.0.243",
]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:src/thztools tests}"
style = [
    "ruff {args:.}",
    "black --check --diff {args:.}",
]
fmt = [
    "black {args:.}",
    "ruff --fix {args:.}",
    "style",
]
all = [
    "style",
    "typing",
]

[tool.black]
target-version = ["py38"]
line-length = 79
skip-string-normalization = true

[tool.ruff]
target-version = "py38"
line-length = 79
select = [
    "A",
    "ARG",
    "B",
    "C",
    "DTZ",
    "E",
    "EM",
    "F",
    "FBT",
    "I",
    "ICN",
    "ISC",
    "N",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "Q",
    "RUF",
    "S",
    "T",
    "TID",
    "UP",
    "W",
    "YTT",
]
ignore = [
    # Allow non-abstract empty methods in abstract base classes
    "B027",
    # Allow boolean positional values in function calls, like `dict.get(... True)`
    "FBT003",
    # Ignore checks for possible passwords
    "S105", "S106", "S107",
    # Ignore complexity
    "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
    # Allow print statements
    "T201"
]
unfixable = [
    # Don't touch unused imports
    "F401",
]

[tool.ruff.isort]
known-first-party = ["thztools"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["thztools", "tests"]
branch = true
parallel = true
omit = [
    "src/thztools/__about__.py",
]

[tool.coverage.paths]
thztools = ["src/thztools", "*/thztools/src/thztools"]
tests = ["tests", "*/thztools/tests"]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
## Show warnings as errors for debugging
#filterwarnings = [
#    "error",
#]

[tool.hatch.envs.docs]
dependencies = [
    "matplotlib",
    "numpydoc",
    "pydata-sphinx-theme",
    "sphinx",
    "tomli",
]
[tool.hatch.envs.docs.scripts]
build = "sphinx-build -v -b html docs/source docs/build/html"

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"

[[tool.mypy.overrides]]
module = [
    "pytest",
    "scipy",
    "scipy.linalg",
    "scipy.optimize",
]
ignore_missing_imports = true

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/docs",
    "/envs",
    "/examples",
    "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/thztools"]
